# srray

./: Cargo.toml  LICENSE  README.md
demo/: .gitignore  Cargo.toml
demo/src/: main.rs
src/: buffer.rs  camera.rs  color.rs  fractals.rs  geometries.rs  halton.rs  lib.rs  light.rs  lights.rs  main.rs  materials.rs  objects.rs  point.rs  random.rs  ray.rs  render.rs  scene.rs  sdf.rs  vector.rs
