[package]
name = "srray"
version = "0.1.0"
authors = ["Evert Provoost <evert@eprovst.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = { version = "^1", optional = true }

[features]
default = ["parallel"]
parallel = ["dep:rayon"]
